src/main/java/com/example/springsecurityregistration/web/error/UserHasNotRoleException.java
package com.example.springsecurityregistration.web.error;

public class UserHasNotRoleException extends RuntimeException {

    public UserHasNotRoleException(String message) {
        super(message);
    }
}
